--- a/links/index.html
+++ b/links/index.html
@@ -229,9 +229,9 @@
     </header>
     
       <a class="link-item" href="http://www.i-lightning.cn/">
-        <img class="link-avatar" src="https://www.wentixiaogege.com/media/links/liyang.jpeg" alt="Yang Li">
-        <h3 class="link-title">Yang Li</h3>
-        <p class="link-description">Another Meteorology Engineer.</p>
+        <img class="link-avatar" src="https://www.wentixiaogege.com/media/links/yuanji.jpg" alt="Ji Yuan">
+        <h3 class="link-title">Ji Yuan</h3>
+        <p class="link-description">VP of East Low Carbon.</p>
       </a>
     
       <a class="link-item" href="http://temp.wentixiaogege.com/">
