update yuanji link

--- a/resume/index.html
+++ b/resume/index.html
@@ -30,7 +30,7 @@
   
 
   
-  <meta name="author" content="Qi Zhang">
+  <meta name="author" content="Wentixiaogege">
   <meta name="description" content="Getty Images Contributor. I&#39;m not a photographer but a data enthusiast.">
 
   
@@ -233,7 +233,7 @@
     <div class="resume">
     
     <h2>
-      Qi Zhang
+      Wentixiaogege
     </h2>
     
 
