update yuanji link

--- a/links/index.html
+++ b/links/index.html
@@ -228,7 +228,7 @@
       <h2 class="list-label">Links</h2>
     </header>
     
-      <a class="link-item" href="www.era.bgu.tum.de/team/former-members-and-students/ji-yuan">
+      <a class="link-item" href="http://www.era.bgu.tum.de/team/former-members-and-students/ji-yuan">
         <img class="link-avatar" src="https://www.wentixiaogege.com/media/links/yuanji.jpg" alt="Ji Yuan">
         <h3 class="link-title">Ji Yuan</h3>
         <p class="link-description">VP of East Low Carbon.</p>
