--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   
   <h1 class="title">wentixiaogege</h1>
   
-  <p class="subtitle">Getty Images Contributor. I&#39;m not a photographer but a data enthusiast.</p>
+  <p class="subtitle">一半忧与愁，一半花与海</p>
   <button class="menu-toggle" type="button" aria-label="Main Menu" aria-expanded="false" tab-index="0">
     <span class="icon icon-menu" aria-hidden="true"></span>
   </button>
