--- a/resume/index.html
+++ b/resume/index.html
@@ -277,7 +277,7 @@
     
       <div class="meta">
         <div class="upper-row">
-          <h4 class="job-title">Algorithm Engineer, JD</h4>
+          <h4 class="job-title">Algorithm Engineer, Face++</h4>
           <div class="year">09/2019 - Now</div>
         </div>
         <div class="company">Face++, HaiDian, Beijing</div>
